Fix footer in dark mode

--- a/style.css
+++ b/style.css
@@ -18,6 +18,11 @@
   --bg-color-secondary: #6d6d6d;
   --bg-color-dark: #9b9d97;
 }
+
+#footer.dark {
+  background-color: var(--bg-color-light);
+}
+
 /* Darkmode End */
 
 * {
